@@ -1,3 +1,8 @@
+Changes after KWord-1.3-beta3
+=============================
+- Fixed handling of part frames (clicking didn't select it anymore, #63041)
+- Fixed cursor shape when pressing Ctrl.
+
 Changes after KWord-1.3-beta2
 =============================
 - Right-click on a selected frame shouldn't unselect it
